# HiPAI-Montague-Semantic-Cognition

./: .gitignore  README.md  docker-compose.yml  mcp_config.json  pyproject.toml  seed_axioms.py  test_keys.py
docs/: original_spec.md
src/hipai/: bridge.py  mcp_server.py  models.py  semantics.py  sources.py  synthesis.py  world_model.py
tests/: integration_db.py  ruff_report.txt  test_hipai.py  test_semantics.py  test_synthesis.py  test_world_model.py
