[project]
name = "hipai-montague-semantic-cognition"
version = "0.1.0"
description = "HiPAI Montague Semantic Cognition: A sparse-tensor deductive reasoning engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "falkordb>=1.0.12",
    "mcp>=1.3.0",
    "pydantic>=2.10.6",
    "aiohttp>=3.9.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.8.0",
]
[project.scripts]
hipai-mcp = "hipai.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PTH", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
